# academic_benchmark_retrieval

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/evalagent/: label_mapping.json
data/processed/: chart_mrag_corpus_index.jsonl  chart_mrag_test_queries.json  chartqa_sample_index.jsonl  mathvista_sample_index.jsonl  mathvista_sample_index_before_fix.jsonl  plotqa_sample_index.jsonl  qcaleval_sample_index.jsonl  scienceqa_sample_index.jsonl
reports/: metadata_label_inventory.json  metadata_label_inventory.txt
scripts/: 01_prepare_qcaleval.py  02_prepare_scienceqa.py  03_prepare_chartqa.py  04_prepare_plotqa.py  05_prepare_mathvista.py  06_merge_academic_5.py  07_5_localize_academic_images.py  07_build_qwenvl_embeddings.py  08_build_zvec_index.py  09_search_zvec.py  10_aggregate_recommendation.py
scripts/evalagent/: 00_export_metadata_labels.py  00_validate_label_mapping.py  01_parse_requirement.py  02_build_retrieval_query.py  03_run_evalagent.py
