[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-benchmark-retrieval"
version = "0.1.0"
description = "A retrieval pipeline for academic benchmark datasets with multimodal embeddings and zvec search."
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["benchmark", "retrieval", "multimodal", "embedding", "zvec"]

[project.dependencies]
numpy = "*"
requests = "*"
tqdm = "*"
datasets = "*"
zvec = "*"

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest",
]
